src/test/ui/consts/min_const_fn/allow_const_fn_ptr_feature_gate.stderr
error[E0658]: internal implementation detail
  --> $DIR/allow_const_fn_ptr_feature_gate.rs:7:1
   |
LL | #[rustc_allow_const_fn_ptr]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable

error[E0717]: rustc_promotable and rustc_allow_const_fn_ptr attributes must be paired with either a rustc_const_unstable or a rustc_const_stable attribute
  --> $DIR/allow_const_fn_ptr_feature_gate.rs:9:1
   |
LL | const fn compiles(_: fn()) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
